--- a/unm-mobileweb-app/src/main/webapp/univ-intg/css/style.css
+++ b/unm-mobileweb-app/src/main/webapp/univ-intg/css/style.css
@@ -572,127 +572,64 @@ time {
     color: #7b7177; }
 
 .content-wrap.geo {
-  min-height: 450px;
-  position: relative; }
-
-.geo .main-container {
-  position: relative; }
+  min-height: 450px; }
 
 .category-wrap {
   position: relative;
   background-color: #a54078; }
-  .category-one .category-wrap {
-    background-color: #ffb103; }
-  .category-two .category-wrap {
-    background-color: #a54078; }
-  .category-three .category-wrap {
-    background-color: #34c978; }
   .category-wrap .list-wrap {
-    bottom: 50px;
+    bottom: 0;
     position: absolute;
+    background-color: #a54078;
+    padding: 5px 0 0;
     display: none;
     z-index: 10; }
-    .category-one .category-wrap .list-wrap {
-      background-color: #ffb103; }
-    .category-two .category-wrap .list-wrap {
-      background-color: #a54078; }
-    .category-three .category-wrap .list-wrap {
-      background-color: #34c978; }
-  .category-wrap .category-nav-button {
+  .category-wrap .bottom-buttons {
+    background-color: #34c978;
     margin: 0; }
-  .category-wrap .show-category, .category-wrap .hide-category {
-    padding-right: 15px;
+  .category-wrap .show-category {
+    padding-left: 15px;
     text-align: left;
     border-radius: 0;
     border: none;
+    background-color: #34c978;
     font-size: 1.1em;
     font-family: 'Exo', sans-serif;
     font-weight: 500; }
-    .category-one .category-wrap .show-category, .category-one .category-wrap .hide-category {
-      background-color: #ffb103; }
-    .category-two .category-wrap .show-category, .category-two .category-wrap .hide-category {
-      background-color: #a54078; }
-    .category-three .category-wrap .show-category, .category-three .category-wrap .hide-category {
-      background-color: #34c978;
-      text-align: right; }
-    .category-wrap .show-category .icon, .category-wrap .hide-category .icon {
+    .category-wrap .show-category .icon {
       background-position: 0 -210px;
       margin-right: 10px; }
-      .category-three .category-wrap .show-category .icon, .category-three .category-wrap .hide-category .icon {
-        margin-left: 10px; }
   .category-wrap .show-search {
     border-radius: 0;
     background-color: #1d9252;
-    border: none; }
-    .category-one .category-wrap .show-search {
-      background-color: #d39202; }
-    .category-two .category-wrap .show-search {
-      background-color: #7f2456; }
-    .category-three .category-wrap .show-search {
-      background-color: #21a25c; }
+    border: none;
+    border-left: 2px solid #fff; }
     .category-wrap .show-search .icon {
       background-position: -30px -240px; }
-      .category-three .category-wrap .show-search .icon {
-        background-position: -60px -240px; }
-  .category-wrap .hide-category .icon {
-    background-position: -30px -210px;
-    margin-left: 10px; }
-  .category-wrap .category-nav-button.top {
-    border-bottom: 2px solid #fff; }
-  .category-wrap .category-nav-button.bottom {
-    border-top: 2px solid #fff; }
-  .category-wrap .category-buttons {
-    margin: 0; }
-  .category-wrap .category-link {
-    display: inline-block;
-    text-align: center;
-    padding: 9px;
-    background-color: #9e9e9e;
-    border: 1px solid #858585; }
-    .category-wrap .category-link.one.active {
-      background-color: #ffb103;
-      border: none;
-      transition: border-color 1s ease;
-      border-top: 1px dashed transparent; }
-    .category-wrap .category-link.one .icon {
-      background-position: -60px 0; }
-    .category-wrap .category-link.two.active {
-      background-color: #a54078;
-      border: none;
-      transition: border-color 1s ease;
-      border-top: 1px dashed transparent; }
-    .category-wrap .category-link.two .icon {
-      background-position: -60px -30px; }
-    .category-wrap .category-link.three.active {
-      background-color: #34c978;
-      border: none;
-      transition: border-color 1s ease;
-      border-top: 1px dashed transparent; }
-    .category-wrap .category-link.three .icon {
-      background-position: -60px -60px; }
-  .category-wrap.open .category-link.active {
-    border-color: #858585; }
-
-.show-search-long {
-  color: #fff;
-  border-radius: 0;
-  border: none;
-  border-top: 2px solid #34c978;
-  background-color: #9e9e9e;
-  font-size: 1.1em;
-  width: 100%;
-  font-family: 'Exo', sans-serif;
-  font-weight: 500;
-  position: absolute;
-  bottom: 0; }
-  .show-search-long .icon {
-    background-position: -30px -240px; }
-  .category-one .show-search-long {
-    border-color: #ffb103; }
-  .category-two .show-search-long {
-    border-color: #a54078; }
-  .category-three .show-search-long {
-    border-color: #34c978; }
+  .category-wrap .show-search-long {
+    border-radius: 0;
+    border: none;
+    border-top: 2px solid #fff;
+    background-color: #34c978;
+    font-size: 1.1em;
+    width: 100%;
+    font-family: 'Exo', sans-serif;
+    font-weight: 500; }
+    .category-wrap .show-search-long .icon {
+      background-position: -30px -240px; }
+  .category-wrap .hide-category {
+    border: none;
+    border-radius: 0;
+    background-color: transparent;
+    border-bottom: 2px solid #8a3162;
+    width: 90%;
+    margin: 0 auto;
+    text-align: left;
+    display: block;
+    font-size: 1.1em; }
+    .category-wrap .hide-category .icon {
+      background-position: -30px -210px;
+      margin-right: 10px; }
 
 .category-list {
   list-style: none;
@@ -715,15 +652,9 @@ time {
     min-height: 85px;
     padding: 2px; }
     .category-list .category-btn.active {
-      background-color: #ddd; }
-      .category-one .category-list .category-btn.active {
-        background-color: #d39202; }
-      .category-two .category-list .category-btn.active {
-        background-color: #7f2456; }
-      .category-three .category-list .category-btn.active {
-        background-color: #21a25c; }
+      background-color: #9a396f; }
       .category-list .category-btn.active .icon {
-        background-color: rgba(255, 255, 255, 0.3);
+        background-color: #b8759a;
         -webkit-border-radius: 25px;
         -moz-border-radius: 25px;
         -ms-border-radius: 25px;
@@ -772,7 +703,7 @@ time {
       font-weight: 500; }
 
 .search-wrap {
-  position: fixed;
+  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
@@ -847,381 +778,3 @@ time {
     .search-results .list-item .icon {
       margin-right: 5px;
       background-position: -30px -240px; }
-
-.show-add-poi {
-  background-color: #df6138;
-  width: 46px;
-  height: 46px;
-  position: absolute;
-  right: 14px;
-  top: 15px;
-  transition: background-color 1s;
-  padding: 0;
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  -ms-border-radius: 30px;
-  border-radius: 30px; }
-  .show-add-poi .icon {
-    background-position: -30px 0; }
-  .open .show-add-poi {
-    background-color: #FFF; }
-
-.hide-add-poi {
-  background-color: #34c978;
-  width: 44px;
-  height: 44px;
-  right: 15px;
-  top: -22px;
-  position: absolute;
-  padding: 0;
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  -ms-border-radius: 30px;
-  border-radius: 30px; }
-  .hide-add-poi .icon {
-    background-position: 0 -240px; }
-
-.add-poi-screen {
-  margin-top: 17px;
-  border-top: 2px solid #fff;
-  display: none;
-  position: absolute;
-  top: 20px;
-  bottom: 0;
-  width: 100%;
-  z-index: 10; }
-  .category-one .add-poi-screen {
-    background-color: #ffb103; }
-  .category-two .add-poi-screen {
-    background-color: #a54078; }
-  .category-three .add-poi-screen {
-    background-color: #34c978; }
-  .add-poi-screen .title {
-    text-align: center;
-    padding: 7px;
-    margin-top: 7px;
-    margin-bottom: 5px;
-    font-size: 0.9em;
-    font-family: 'Exo', sans-serif;
-    font-weight: 500; }
-
-form.add-poi .form-pad {
-  padding: 5px 10px; }
-form.add-poi .form-group.category {
-  display: inline-block;
-  position: relative;
-  top: -75px;
-  margin-bottom: 0; }
-  form.add-poi .form-group.category select {
-    padding: 0; }
-form.add-poi .form-control {
-  border: none; }
-form.add-poi .form-group.name {
-  margin-top: 10px;
-  margin-bottom: 10px; }
-  form.add-poi .form-group.name input {
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -ms-border-radius: 0;
-    border-radius: 0; }
-form.add-poi .customSelect {
-  color: #8e8e8e;
-  font-size: 9px;
-  height: 80px;
-  padding: 29px 1px 0;
-  text-align: center;
-  width: 80px;
-  line-height: 1.2;
-  -webkit-border-radius: 40px;
-  -moz-border-radius: 40px;
-  -ms-border-radius: 40px;
-  border-radius: 40px; }
-  form.add-poi .customSelect:after {
-    background-image: none;
-    content: initial; }
-  form.add-poi .customSelect .customSelectInner {
-    width: 80px !important; }
-form.add-poi .add-poi-name-field {
-  background-color: #21a25c; }
-form.add-poi .address, form.add-poi .phone, form.add-poi .email {
-  margin-bottom: 5px; }
-  form.add-poi .address input, form.add-poi .phone input, form.add-poi .email input {
-    display: inline-block;
-    width: 88%;
-    height: 25px;
-    font-size: 0.8em;
-    padding: 3px 10px;
-    line-height: 1;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -ms-border-radius: 0;
-    border-radius: 0; }
-form.add-poi .message textarea {
-  font-size: 0.8em;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  -ms-border-radius: 0;
-  border-radius: 0; }
-form.add-poi .form-info p {
-  margin-top: 0;
-  color: #004e24;
-  font-size: 0.8em;
-  font-style: italic;
-  font-family: 'Exo', sans-serif;
-  font-weight: 200; }
-form.add-poi .confirm {
-  position: absolute;
-  bottom: 0;
-  background-color: #df6138;
-  width: 100%;
-  padding: 10px;
-  border-top: 2px solid #fff;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  -ms-border-radius: 0;
-  border-radius: 0;
-  font-family: 'Exo', sans-serif;
-  font-weight: 500; }
-
-.poi-wrap {
-  bottom: 0;
-  min-height: 100%;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  padding-top: 15px; }
-  .poi-wrap.qr-code {
-    top: 50%;
-    min-height: auto; }
-
-.poi-screen {
-  position: relative;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  z-index: 10;
-  min-height: 100%;
-  background-color: #FFF; }
-  .poi-screen .poi-header {
-    position: relative; }
-    .category-one .poi-screen .poi-header {
-      background-color: #d39202; }
-    .category-two .poi-screen .poi-header {
-      background-color: #7f2456; }
-    .category-three .poi-screen .poi-header {
-      background-color: #21a25c; }
-  .poi-screen .category-icon {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    text-align: center;
-    position: absolute;
-    top: -5px;
-    left: 10px;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    -ms-border-radius: 50px;
-    border-radius: 50px; }
-    .category-one .poi-screen .category-icon {
-      background-color: #d39202; }
-    .category-two .poi-screen .category-icon {
-      background-color: #a66689; }
-    .category-three .poi-screen .category-icon {
-      background-color: #64be8d; }
-    .poi-screen .category-icon .icon {
-      display: inline-block;
-      width: 47px;
-      height: 47px;
-      margin: 0 auto;
-      background-image: url(../img/category-icons.png);
-      background-repeat: no-repeat; }
-    .poi-screen .category-icon.category-1 .icon {
-      background-position: 0 0; }
-    .poi-screen .category-icon.category-2 .icon {
-      background-position: -47px 0; }
-    .poi-screen .category-icon.category-3 .icon {
-      background-position: -94px 0; }
-    .poi-screen .category-icon.category-4 .icon {
-      background-position: 0 -47px; }
-    .poi-screen .category-icon.category-5 .icon {
-      background-position: -47px -47px; }
-    .poi-screen .category-icon.category-6 .icon {
-      background-position: -94px -47px; }
-    .poi-screen .category-icon.category-7 .icon {
-      background-position: 0 -94px; }
-    .poi-screen .category-icon.category-8 .icon {
-      background-position: -47px -94px; }
-    .poi-screen .category-icon.category-9 .icon {
-      background-position: -94px -94px; }
-    .poi-screen .category-icon.category-10 .icon {
-      background-position: 0 -141px; }
-    .poi-screen .category-icon.category-11 .icon {
-      background-position: -47px -141px; }
-    .poi-screen .category-icon.category-12 .icon {
-      background-position: -94px -141px; }
-  .poi-screen .hide-poi {
-    padding: 0;
-    background-color: transparent;
-    display: inline-block;
-    vertical-align: middle;
-    float: right;
-    margin-right: 10px;
-    margin-top: 3px; }
-    .poi-screen .hide-poi .icon {
-      background-position: 0 -240px; }
-  .poi-screen .title {
-    padding-left: 60px;
-    width: 85%;
-    display: inline-block;
-    vertical-align: middle;
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 0.9em;
-    font-family: 'Exo', sans-serif;
-    font-weight: 500; }
-  .poi-screen .poi-info {
-    padding: 10px;
-    padding-left: 70px;
-    padding-right: 20px; }
-    .category-one .poi-screen .poi-info {
-      background-color: #ffb103; }
-    .category-two .poi-screen .poi-info {
-      background-color: #a54078; }
-    .category-three .poi-screen .poi-info {
-      background-color: #34c978; }
-    .poi-screen .poi-info address, .poi-screen .poi-info .phone, .poi-screen .poi-info .email {
-      margin-bottom: 7px;
-      font-style: normal;
-      line-height: 1;
-      font-size: 0.7em;
-      font-family: 'Exo', sans-serif;
-      font-weight: 600; }
-      .poi-screen .poi-info address .fa, .poi-screen .poi-info .phone .fa, .poi-screen .poi-info .email .fa {
-        margin-right: 5px; }
-  .poi-screen .tabpanel {
-    margin-top: -30px; }
-  .poi-screen .tab-content {
-    padding: 10px 0 0;
-    color: #000;
-    background-color: #FFF;
-    font-size: 0.9em;
-    font-family: 'Exo', sans-serif;
-    font-weight: 500; }
-    .qr-code .poi-screen .tab-content {
-      min-height: auto; }
-    .poi-screen .tab-content .body {
-      padding: 10px 15px 40px;
-      overflow: auto; }
-      .qr-code .poi-screen .tab-content .body {
-        height: 200px; }
-    .poi-screen .tab-content p {
-      font-family: 'Exo', sans-serif;
-      font-weight: 500; }
-    .poi-screen .tab-content h2 {
-      font-size: 1em;
-      font-weight: 500; }
-    .poi-screen .tab-content ul {
-      padding-left: 15px; }
-    .poi-screen .tab-content li {
-      margin-bottom: 10px;
-      font-size: 0.9em; }
-  .poi-screen .nav-tabs {
-    margin-top: 0; }
-    .poi-screen .nav-tabs li.three {
-      float: right; }
-    .poi-screen .nav-tabs a {
-      color: #fff;
-      background-color: #df6138;
-      margin: 0;
-      padding: 2px 10px;
-      font-size: 11px; }
-      .poi-screen .nav-tabs a:hover, .poi-screen .nav-tabs a:focus {
-        background-color: #df6138; }
-    .poi-screen .nav-tabs .active a {
-      color: #df6138; }
-  .poi-screen #comments .comments-list {
-    list-style: none;
-    padding: 10px 15px;
-    padding-bottom: 194px;
-    margin-bottom: 15px;
-    margin-top: 0; }
-  .poi-screen .comment-item .author {
-    display: inline-block;
-    font-family: 'Exo', sans-serif;
-    font-weight: 600; }
-    .category-one .poi-screen .comment-item .author {
-      color: #d39202; }
-    .category-two .poi-screen .comment-item .author {
-      color: #7f2456; }
-    .category-three .poi-screen .comment-item .author {
-      color: #21a25c; }
-  .poi-screen .comment-item time {
-    display: inline-block;
-    width: auto;
-    color: #7a7a7a; }
-  .poi-screen .comment-item .comment-text {
-    margin-top: 0;
-    font-family: 'Exo', sans-serif;
-    font-weight: 500; }
-  .poi-screen .comment-field {
-    padding: 15px 5px 5px;
-    margin: 0 10px; }
-    .category-one .poi-screen .comment-field {
-      background-color: #ffb103; }
-    .category-two .poi-screen .comment-field {
-      background-color: #a54078; }
-    .category-three .poi-screen .comment-field {
-      background-color: #34c978; }
-  .poi-screen .submit {
-    background-color: #df6138; }
-    .category-one .poi-screen .submit {
-      border-color: #ffb103; }
-    .category-two .poi-screen .submit {
-      border-color: #a54078; }
-    .category-three .poi-screen .submit {
-      border-color: #34c978; }
-
-.long-button {
-  -moz-border-bottom-colors: none;
-  -moz-border-left-colors: none;
-  -moz-border-right-colors: none;
-  -moz-border-top-colors: none;
-  background-color: #9e9e9e;
-  border-color: #34c978 -moz-use-text-color -moz-use-text-color;
-  border-image: none;
-  border-radius: 0;
-  border-right: medium none;
-  border-style: solid none none;
-  border-width: 2px medium medium;
-  color: #fff;
-  font-family: "Exo",sans-serif;
-  font-size: 14px;
-  font-weight: 500;
-  width: 100%;
-  padding: 10px;
-  height: 40px;
-  line-height: 1; }
-
-.new-comment-wrap {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: #FFF; }
-
-.back-to-geo {
-  width: 100%;
-  background-color: #df6138;
-  height: auto;
-  padding: 5px;
-  position: absolute;
-  bottom: 0; }
-  .category-one .back-to-geo {
-    border-color: #ffb103; }
-  .category-two .back-to-geo {
-    border-color: #a54078; }
-  .category-three .back-to-geo {
-    border-color: #34c978; }
-  .back-to-geo .icon {
-    background-position: -30px -182px; }
