--- a/unm-mobileweb-app/src/main/webapp/univ-intg/sass/style.scss
+++ b/unm-mobileweb-app/src/main/webapp/univ-intg/sass/style.scss
@@ -1,12 +1,8 @@
 /*Variables*/
 $yellow: #ffb103;
-$dyellow:#d39202;
 $orange: #df6138;
 $green: #34c978;
-$dgreen:#21a25c;
 $blue: #45b2c9;
-$violet: #a54078;
-$dviolet:#7f2456;
 /*Mixins*/
 @mixin ff($weight){
     font-family:  'Exo', sans-serif;
@@ -669,175 +665,70 @@ time{
 }
 .content-wrap.geo{
     min-height: 450px;
-    position:relative;
-}
-.geo .main-container{
-    position: relative;
 }
 .category-wrap{
     position: relative;
-    background-color: $violet;
-    .category-one &{
-        background-color: $yellow; 
-    }
-    .category-two &{
-        background-color: $violet; 
-    }
-    .category-three &{
-        background-color: $green; 
-    }   
+    background-color: #a54078;
     .list-wrap{
-        bottom: 50px;
+        bottom: 0;
         position: absolute;
+        background-color: #a54078;
+        padding: 5px 0 0;
         display: none;
         z-index: 10;
-        .category-one &{
-            background-color: $yellow; 
-        }
-        .category-two &{
-            background-color: $violet; 
-        }
-        .category-three &{
-            background-color: $green; 
-        }
     }
-    .category-nav-button{
+    .bottom-buttons{
+        background-color: #34c978;
         margin: 0;
     }
     .show-category{
-        padding-right: 15px;
+        padding-left: 15px;
         text-align: left;
         border-radius: 0;
         border:none;
+        background-color: #34c978;
         font-size: 1.1em;
-        .category-one &{
-            background-color: $yellow       
-        }
-        .category-two &{
-            background-color: $violet;       
-        }
-        .category-three &{
-            background-color: $green;
-            text-align: right;
-        }
         @include ff(500);
         .icon{
             background-position: 0 -210px;
             margin-right: 10px;
-            .category-three &{
-                margin-left: 10px;      
-            }
         }
     }
     .show-search{
         border-radius: 0;
         background-color: #1d9252;
-        .category-one &{
-            background-color: $dyellow;
-        }
-        .category-two &{
-            background-color: $dviolet;
-        }
-        .category-three &{
-            background-color: $dgreen;
-        }
         border:none;
+        border-left: 2px solid #fff;
         .icon{
             background-position: -30px -240px;
-            .category-three &{
-                background-position: -60px -240px;
-            }
         }
     }
-    .left-search{
-
+    .show-search-long{
+        border-radius: 0;
+        border:none;
+        border-top: 2px solid #fff;
+        background-color: #34c978;
+        font-size: 1.1em;
+        width:100%;
+        @include ff(500);
+        .icon{
+            background-position: -30px -240px;
+        }
     }
     .hide-category{
-        @extend .show-category;
+        border:none;
+        border-radius: 0;
+        background-color: transparent;
+        border-bottom: 2px solid #8a3162;
+        width: 90%;
+        margin: 0 auto;
+        text-align: left;
+        display:block;
+        font-size: 1.1em;
         .icon{
             background-position: -30px -210px;
-            margin-left: 10px;
+            margin-right: 10px;
         }
-    }
-    .category-nav-button{
-        &.top{
-            border-bottom: 2px solid #fff;
-        }
-        &.bottom{
-            border-top: 2px solid #fff;
-        }
-    }
-    .category-buttons{
-        margin: 0;
-    }
-    .category-link{
-        display:inline-block;
-        text-align: center;
-        padding: 9px;
-        background-color: #9e9e9e;
-        border: 1px solid #858585;
-        &.one {
-            &.active{
-                background-color: $yellow;
-                border: none;
-                transition:border-color 1s ease;
-                border-top: 1px dashed transparent;
-            }
-            .icon{
-                background-position: -60px 0;
-            }
-        }
-        &.two {
-            &.active{
-                background-color: $violet;
-                border: none;
-                transition:border-color 1s ease;
-                border-top: 1px dashed transparent;
-            }
-            .icon{
-                background-position: -60px -30px;
-            }
-        }
-        &.three{
-            &.active{
-                background-color: $green;
-                border: none;
-                transition:border-color 1s ease;
-                border-top: 1px dashed transparent;
-            }
-            .icon{
-                background-position: -60px -60px;
-            }  
-        } 
-    }
-    &.open{
-        .category-link.active{
-            border-color: #858585;
-        }
-    }
-}
-.show-search-long{
-    color:#fff;
-    border-radius: 0;
-    border:none;
-    border-top: 2px solid $green;
-    background-color: #9e9e9e;
-    font-size: 1.1em;
-    width:100%;
-    @include ff(500);
-    position:absolute;
-    bottom:0;
-    .icon{
-        background-position: -30px -240px;
-    }
-    .category-one &{
-        border-color: $yellow;
-    }
-    .category-two &{
-        border-color: $violet;
-    }
-    .category-three &{
-        border-color: $green;
     }
 }
 .category-list{
@@ -862,18 +753,9 @@ time{
         min-height:85px;
         padding:2px;
         &.active{
-            .category-one &{
-                background-color: $dyellow;
-            }
-            .category-two &{
-                background-color: $dviolet;
-            }
-            .category-three &{
-                background-color: $dgreen;
-            }
-            background-color: #ddd;
+            background-color: #9a396f;
             .icon{
-                background-color: rgba(255,255,255,0.3);
+                background-color: #b8759a;
                 @include border-radius(25px);
             }
         }
@@ -959,7 +841,7 @@ time{
     }
 }
 .search-wrap{
-    position: fixed;
+    position: absolute;
     top:0;
     bottom:0;
     left: 0;
@@ -977,7 +859,7 @@ time{
         color: #fff;
         padding-left: 45px;
         padding-right: 45px;
-        background-color:$violet;
+        background-color:#a54078;
         border: none;
         border-radius: 0;
         box-shadow: none;
@@ -1020,7 +902,7 @@ time{
     }
 }
 .search-results{
-    background-color: $violet;
+    background-color: #a54078;
     @include ff(300);
     .results-title{
         font-size: 0.8em;
@@ -1050,471 +932,5 @@ time{
             margin-right: 5px;
             background-position:-30px -240px;
         }
-    }
-}
-.show-add-poi{
-    background-color: #df6138;
-    width: 46px;
-    height: 46px;
-    position: absolute;
-    right: 14px;
-    top: 15px;
-    transition:background-color 1s;
-    padding: 0;
-    @include border-radius(30px);
-    .icon{
-        background-position: -30px 0;
-    }
-    .open &{
-        background-color: #FFF;
-    }
-}
-.hide-add-poi{
-    background-color: $green;
-    width: 44px;
-    height: 44px;
-    right: 15px;
-    top: -22px;
-    position: absolute;
-    padding: 0;
-    @include border-radius(30px);
-    .icon{
-        background-position: 0 -240px;
-    }
-}
-.add-poi-screen{
-    margin-top: 17px;
-    border-top: 2px solid #fff;
-    display: none;
-    position: absolute;
-    top:20px;
-    bottom: 0;
-    width:100%;
-    z-index:10;
-    .category-one &{
-        background-color: $yellow       
-    }
-    .category-two &{
-        background-color: $violet;       
-    }
-    .category-three &{
-        background-color: $green       
-    }
-    .title{
-        text-align: center;
-        padding: 7px;
-        margin-top: 7px;
-        margin-bottom: 5px;
-        font-size: 0.9em;
-        @include ff(500);
-    }
-}
-form.add-poi{
-    .form-pad{
-        padding: 5px 10px; 
-    }
-    .form-group.category{
-        display: inline-block;
-        position:relative;
-        top:-75px;
-        margin-bottom: 0;
-        select{
-            padding: 0;
-        }
-    }
-    .form-control{
-        border: none;
-    }
-    .form-group.name{
-        margin-top: 10px;
-        margin-bottom: 10px;
-        input{
-            @include border-radius(0);
-        }
-    }
-    .customSelect{
-        color: #8e8e8e;
-        font-size: 9px;
-        height: 80px;
-        padding: 29px 1px 0;
-        text-align: center;
-        width: 80px;
-        line-height: 1.2;
-        @include border-radius(40px);
-        &:after{
-            background-image: none;
-            content: initial;
-        }
-        .customSelectInner{
-            width: 80px!important;
-        }
-    }
-    .add-poi-name-field{
-        background-color: $dgreen;
-    }
-    .address,.phone,.email{
-        margin-bottom: 5px;
-        input{
-            display: inline-block;
-            width: 88%;
-            height: 25px;
-            font-size: 0.8em;
-            padding: 3px 10px;
-            line-height: 1;
-            @include border-radius(0);
-        }
-    }
-    .message{
-        textarea{
-            font-size: 0.8em;
-            @include border-radius(0);
-        }
-    }
-    .form-info{
-        p{
-            margin-top: 0;
-            color: #004e24;
-            font-size: 0.8em;
-            font-style: italic;
-            @include ff(200); 
-        }
-    }
-    .confirm{
-        position:absolute;
-        bottom: 0;
-        background-color: #df6138;
-        width: 100%;
-        padding: 10px;
-        border-top:2px solid #fff;
-        @include border-radius(0);
-        @include ff(500);
-    }
-}
-.poi-wrap{
-    bottom: 0;
-    min-height: 100%;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    padding-top: 15px;
-    &.qr-code {
-        top:50%;
-        min-height: auto;
-    }
-}
-.poi-screen{
-    position: relative;
-    top:0;
-    bottom: 0;
-    width:100%;
-    z-index:10;
-    min-height: 100%;
-    background-color: #FFF;
-    .poi-header{
-        position: relative;
-        .category-one &{
-            background-color: $dyellow;     
-        }
-        .category-two &{
-            background-color: $dviolet;       
-        }
-        .category-three &{
-            background-color: $dgreen       
-        }
-    }
-    .category-icon{
-        display: inline-block;
-        width: 50px;
-        height: 50px;
-        text-align: center;
-        position: absolute;
-        top:-5px;
-        left: 10px;
-        @include border-radius(50px);
-        .category-one &{
-            background-color: #d39202;     
-        }
-        .category-two &{
-            background-color: #a66689;       
-        }
-        .category-three &{
-           background-color: #64be8d;    
-        }
-        .icon{
-            display: inline-block;
-            width: 47px;
-            height: 47px;
-            margin: 0 auto;
-            background-image: url(../img/category-icons.png);
-            background-repeat: no-repeat;
-        }
-        &.category-1{
-            .icon{
-                background-position: 0 0;
-            }
-        }
-        &.category-2{
-            .icon{
-                background-position: -47px 0;
-            }
-        }
-        &.category-3{
-            .icon{
-                background-position: -94px 0;
-            }
-        }
-        &.category-4{
-            .icon{
-                background-position: 0 -47px;
-            }
-        }
-        &.category-5{
-            .icon{
-                background-position: -47px -47px;
-            }
-        }
-        &.category-6{
-            .icon{
-                background-position: -94px -47px;
-            }
-        }
-        &.category-7{
-            .icon{
-                background-position: 0 -94px;
-            }
-        }
-        &.category-8{
-            .icon{
-                background-position: -47px -94px;
-            }
-        }
-        &.category-9{
-            .icon{
-                background-position: -94px -94px;
-            }
-        }
-        &.category-10{
-            .icon{
-                background-position: 0 -141px;
-            }
-        }
-        &.category-11{
-            .icon{
-                background-position: -47px -141px;
-            }
-        }
-        &.category-12{
-            .icon{
-                background-position: -94px -141px;
-            }
-        }
-    }
-    .hide-poi{
-        padding: 0;
-        background-color: transparent;
-        display:inline-block;
-        vertical-align:middle;
-        float: right;
-        margin-right: 10px;
-        margin-top: 3px;
-        .icon{
-            background-position: 0 -240px;
-        }
-    }
-    .title{
-        padding-left: 60px;
-        width: 85%;
-        display: inline-block;
-        vertical-align:middle;
-        text-align: center;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        font-size: 0.9em;
-        @include ff(500);
-    }
-    .poi-info{
-        padding: 10px;
-        padding-left: 70px;
-        padding-right: 20px;
-        .category-one &{
-            background-color: $yellow       
-        }
-        .category-two &{
-            background-color: $violet;       
-        }
-        .category-three &{
-            background-color: $green       
-        }
-        address,.phone,.email{
-            margin-bottom: 7px;
-            font-style: normal;
-            line-height: 1;
-            font-size: 0.7em;
-            @include ff(600);
-            .fa{
-                margin-right: 5px;
-            }
-        }
-    }
-    .tabpanel{
-        margin-top: -30px;
-    }
-    .tab-content{
-        padding: 10px 0 0;
-        color: #000;
-        background-color: #FFF;
-        font-size: 0.9em;
-        @include ff(500);
-        .qr-code &{
-            min-height:auto;
-        }
-        .body{
-            padding: 10px 15px 40px;
-            overflow: auto;
-            .qr-code &{
-                height:200px;
-            }
-        }
-        p{
-            @include ff(500);
-        }
-        h2{
-            font-size: 1em;
-            font-weight: 500;
-        }
-        ul{
-            padding-left: 15px;
-        }
-        li{
-            margin-bottom: 10px;
-            font-size: 0.9em;
-        }
-    }
-    .nav-tabs{
-        margin-top: 0;
-        li.three{
-            float: right;
-        }
-        a{  
-            color: #fff;
-            background-color: #df6138;
-            margin:0;
-            padding: 2px 10px;
-            font-size: 11px;
-            &:hover,&:focus{
-                background-color: #df6138;
-            }
-        }
-        .active{
-            a{
-                color: #df6138;
-            }
-        }
-    }
-    #comments{
-        .comments-list{
-            list-style: none;
-            padding:10px 15px;
-            padding-bottom: 194px;
-            margin-bottom: 15px;
-            margin-top: 0;
-        }
-    }
-    .comment-item{
-        .author{
-            display: inline-block;
-            @include ff(600);
-            .category-one &{
-                color: $dyellow       
-            }
-            .category-two &{
-                color: $dviolet;       
-            }
-            .category-three &{
-                color: $dgreen       
-            }
-        }
-        time{
-            display: inline-block;
-            width: auto;
-            color:#7a7a7a;
-        }
-        .comment-text{
-            margin-top: 0;
-            @include ff(500);
-        }
-    }
-    .comment-field{
-        padding: 15px 5px 5px;
-        margin: 0 10px;
-        .category-one &{
-            background-color: $yellow;     
-        }
-        .category-two &{
-            background-color: $violet;       
-        }
-        .category-three &{
-           background-color: $green       
-        }
-    }
-    .submit{
-        background-color: #df6138;
-        .category-one &{
-            border-color: $yellow;     
-        }
-        .category-two &{
-            border-color: $violet;       
-        }
-        .category-three &{
-            border-color: $green       
-        }
-    }
-}
-.long-button{
-    -moz-border-bottom-colors: none;
-    -moz-border-left-colors: none;
-    -moz-border-right-colors: none;
-    -moz-border-top-colors: none;
-    background-color: #9e9e9e;
-    border-color: #34c978 -moz-use-text-color -moz-use-text-color;
-    border-image: none;
-    border-radius: 0;
-    border-right: medium none;
-    border-style: solid none none;
-    border-width: 2px medium medium;
-    color: #fff;
-    font-family: "Exo",sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    width: 100%;
-    padding:10px;
-    height: 40px;
-    line-height: 1;
-}
-.new-comment-wrap{
-    position:absolute;
-    bottom: 0;
-    left:0;
-    width: 100%;
-    background-color: #FFF;
-}
-.back-to-geo{
-    width: 100%;
-    background-color: #df6138;
-    height:auto;
-    padding: 5px;
-    position:absolute;
-    bottom:0;
-    .category-one &{
-        border-color: $yellow;     
-    }
-    .category-two &{
-        border-color: $violet;       
-    }
-    .category-three &{
-        border-color: $green       
-    }
-    .icon{
-        background-position: -30px -182px;
     }
 }
